--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.48.0",
+    "classnames": "^2.5.1",
+    "lucide-react": "^0.564.0",
     "next": "15.0.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "classnames": "^2.5.1",
-    "@supabase/supabase-js": "^2.48.0"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "typescript": "^5.6.3",
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.13.0",
+    "eslint-config-next": "15.0.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.14",
-    "eslint": "^9.13.0",
-    "eslint-config-next": "15.0.0"
+    "typescript": "^5.6.3"
   }
 }
